readme ye örnek login ui ı eklendi

--- a/hotelbuilder-api/HotelBuilder.API/appsettings.json
+++ b/hotelbuilder-api/HotelBuilder.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
  "ConnectionStrings": {
-  "DefaultConnection": "Server=MELIKE;Database=HotelBuilderDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  "DefaultConnection": "Server=mssql;Database=HotelBuilderDb;User=sa;Password=Your_password123;TrustServerCertificate=true;"
 }
 
 }
