--- a/hotelbuilder-api/docker-compose.yml
+++ b/hotelbuilder-api/docker-compose.yml
@@ -1,28 +1,13 @@
-version: '3.9'
+version: '3.8'
+
 services:
-  hotel-api:
-    build:
-      context: .
-      dockerfile: HotelBuilder.API/Dockerfile
+  websnap-backend:
+    build: .
     ports:
-      - "5000:80"
-    depends_on:
-      - mssql
+      - "5000:5000"
     environment:
-      - ConnectionStrings__DefaultConnection=Server=mssql;Database=HotelBuilderDb;User=sa;Password=Your_password123;TrustServerCertificate=true;
-    networks:
-      - hotel-network
-
-  mssql:
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    container_name: sqlserver
-    environment:
-      SA_PASSWORD: "Your_password123"
-      ACCEPT_EULA: "Y"
-    ports:
-      - "1433:1433"
-    networks:
-      - hotel-network
-
-networks:
-  hotel-network:
+      - MONGO_URI=${MONGO_URI}
+    env_file:
+      - .env
+    volumes:
+      - .:/app
