--- a/hotelbuilder-api/docker-compose.yml
+++ b/hotelbuilder-api/docker-compose.yml
@@ -11,3 +11,30 @@ services:
       - .env
     volumes:
       - .:/app
+    depends_on:
+      - mongodb
+
+  websnap-frontend:
+    build: ../hotelbuilder-web
+    ports:
+      - "3000:3000"
+    environment:
+      - NEXT_PUBLIC_API_URL=http://localhost:5000
+    volumes:
+      - ../hotelbuilder-web:/app
+      - /app/node_modules
+    depends_on:
+      - websnap-backend
+
+  mongodb:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=admin
+      - MONGO_INITDB_ROOT_PASSWORD=password
+    volumes:
+      - mongodb_data:/data/db
+
+volumes:
+  mongodb_data:
